syntax = "proto3";

option go_package = "edm-document-classifier-presentation-abstractions";

package Edm.Document.Classifier.Presentation.Abstractions;

option csharp_namespace = "Edm.Document.Classifier.Presentation.Abstractions";

import "Grpc/Services/DocumentReferences/Queries/SearchValues/search_values_document_references_query.proto";

import "Grpc/Services/DocumentReferences/Queries/GetTypes/get_types_document_references_query.proto";

service DocumentReferencesService {
  rpc GetTypes(GetTypesDocumentReferencesQuery) returns (GetTypesDocumentReferencesQueryResponse);
  rpc SearchValues(SearchValuesDocumentReferencesQuery) returns (SearchValuesDocumentReferencesQueryResponse);
}
